care/force-app/main/default/objects/CCC_Pricing_Tier_Setting__mdt/CCC_Pricing_Tier_Setting__mdt.object-meta.xml
<CustomObject>
    <label>CCC Pricing Tier Setting</label>
    <pluralLabel>CCC Pricing Tier Settings</pluralLabel>
</CustomObject>