care/force-app/main/default/objects/CCC_Pricing_Tier_Setting__mdt/fields/Bonus_Points__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Points__c</fullName>
    <description>The Bonus Points to apply when this tier is selected</description>
    <inlineHelpText>The Bonus Points to apply when this tier is selected</inlineHelpText>
    <label>Bonus Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>