care/force-app/main/default/objects/CCC_Pricing_Tier_Setting__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Controls the order that the pricing tiers are arranged on various UI areas in Contract Composer</description>
    <inlineHelpText>Controls the order that the pricing tiers are arranged on various UI areas in Contract Composer</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>